--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,15 +1,22 @@
 @import "_reset.scss";
 @import "_variables.scss";
+@import "_buttons.scss";
 * {
   box-sizing: border-box;
 }
 body {
   font-family: "Roboto", sans-serif;
-  background: url(../img/main/batman.png) no-repeat;
-  background-size: cover;
+  background: #000000;
 }
 .container {
   max-width: 1140px;
   margin: 0 auto;
 }
-@import "_main.scss";
+.main {
+  padding-bottom: 110px;
+  color: $text-color-light;
+  background: url(../img/main/batman.png) no-repeat;
+  background-size: cover;
+}
+@import "_navbar.scss";
+@import "_header.scss";
