--- a/src/css/index.css
+++ b/src/css/index.css
@@ -304,4 +304,124 @@ body {
   font-size: 16px;
   padding: 5px 10px 5px 10px;
 }
+
+.more .container {
+  background: #ffffff;
+}
+
+.more {
+  box-shadow: -2px -28px 46px 35px rgba(0, 0, 0, 0.75);
+}
+
+.more__blocks {
+  padding: 44px 44px 44px 44px;
+  display: flex;
+}
+
+.more__cover {
+  flex-basis: 15%;
+  display: flex;
+  flex-direction: column;
+}
+
+.more__cover .button {
+  margin-top: 20px;
+  background: #ff8f27;
+  padding: 10px 20px;
+  color: #ffffff;
+}
+
+.more__roles {
+  display: flex;
+  flex-direction: column;
+  margin-top: 35px;
+}
+
+.more__roles h2 {
+  font-weight: 900;
+  margin-bottom: 15px;
+}
+
+.more__roles a {
+  margin-bottom: 5px;
+  text-decoration: underline;
+}
+
+.more-contain {
+  flex-basis: 75%;
+  flex-wrap: wrap;
+  font-weight: 500;
+  font-size: 18px;
+  display: flex;
+}
+
+.more-pages {
+  display: flex;
+  margin-bottom: 40px;
+}
+
+.more-pages div {
+  margin-left: 42px;
+}
+
+.more-bookmark {
+  min-width: 12px;
+  margin-left: 50px;
+}
+
+.more-info {
+  display: flex;
+}
+
+.more-page {
+  width: 505px;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 140%;
+  margin-left: 44px;
+}
+
+.more-page h2 {
+  margin: 50px 0 25px 0;
+  font-weight: 900;
+}
+
+.more-page p {
+  width: 100%;
+}
+
+.more-addictional {
+  margin-left: 50px;
+}
+
+.more-addictional h2 {
+  margin-bottom: 20px;
+  text-align: center;
+  font-weight: 900;
+}
+
+.more-form {
+  display: flex;
+}
+
+.more-form input {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 5px 0px 0px 5px;
+  padding: 12px 80px 12px 10px;
+}
+
+.more-form button {
+  width: 40px;
+  height: 40px;
+  border-radius: 0px 5px 5px 0px;
+  background: #ff8f27;
+  text-align: center;
+  padding: 12px;
+}
+
+.more-form button img {
+  max-width: 100%;
+  width: 20px;
+  height: 15px;
+}
 /*# sourceMappingURL=index.css.map */
