--- a/src/scss/_more.scss
+++ b/src/scss/_more.scss
@@ -2,6 +2,7 @@
   background: #ffffff;
 }
 .more {
+  display: none;
   -webkit-box-shadow: -2px -28px 46px 35px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: -2px -28px 46px 35px rgba(0, 0, 0, 0.75);
   box-shadow: -2px -28px 46px 35px rgba(0, 0, 0, 0.75);
@@ -29,6 +30,7 @@
       margin-bottom: 15px;
     }
     a {
+      cursor: pointer;
       margin-bottom: 5px;
       text-decoration: underline;
     }
@@ -54,6 +56,7 @@
   &-info {
     display: flex;
   }
+  // FIXME: width надо переписать под адаптив
   &-page {
     width: 505px;
     font-weight: normal;
@@ -69,11 +72,18 @@
     }
   }
   &-addictional {
+    text-align: center;
     margin-left: 50px;
     h2 {
       margin-bottom: 20px;
       text-align: center;
       font-weight: 900;
+    }
+    & .ad-block {
+      img {
+        width: 100%;
+        margin-top: 30px;
+      }
     }
   }
   &-form {
