--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,5 +1,6 @@
 .header {
   &__blocks {
+    padding-bottom: 50px;
     display: flex;
     flex-direction: column;
   }
@@ -30,5 +31,12 @@
     margin-right: 20px;
     font-size: 16px;
     padding: 5px 10px 5px 10px;
+  }
+}
+@media (max-width: 1024px) {
+  .header {
+    &__blocks {
+      padding: 0 25px 50px 25px;
+    }
   }
 }
