--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -34,5 +34,8 @@ body {
 //     background-position: center;
 //   }
 // }
-@media (max-width: 1024px) {
+@media (max-width: 480px) {
+  body {
+    overflow: auto;
+  }
 }
