--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -32,11 +32,45 @@
     font-size: 16px;
     padding: 5px 10px 5px 10px;
   }
+  &-buttons-wrap {
+    display: flex;
+    align-items: center;
+  }
 }
 @media (max-width: 1024px) {
   .header {
     &__blocks {
       padding: 0 25px 50px 25px;
     }
+  }
+}
+@media (max-width: 480px) {
+  .header {
+    &-button {
+      margin: 0;
+    }
+    &__blocks {
+      padding: 0 0 50px 0;
+    }
+    &__block {
+      &-wrap {
+        flex-direction: column;
+        justify-content: space-between;
+        &:last-child {
+          display: none;
+        }
+      }
+    }
+    &-buttons-wrap {
+      &:last-child {
+        margin-top: 10px;
+      }
+      button {
+        margin-right: 10px;
+      }
+    }
+  }
+  .play-button {
+    margin: 0;
   }
 }
