--- a/src/scss/_more.scss
+++ b/src/scss/_more.scss
@@ -6,7 +6,7 @@
   opacity: 0;
   transition: 0.7s;
   box-shadow: -2px -28px 46px 35px rgba(0, 0, 0, 0.75);
-  &__blocks {
+  &-wrap {
     height: 840px;
     padding: 44px 44px 44px 44px;
     display: flex;
