--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar {
   padding-top: 45px;
-  &__blocks {
+  &-wrap {
     display: flex;
     align-items: center;
     justify-content: center;
